Locationhandler and Transportplan

--- a/externalRest/src/main/resources/application.properties
+++ b/externalRest/src/main/resources/application.properties
@@ -28,8 +28,8 @@ vsp.external-apis.nominatim-timeout=5000
 
 # Geofox API (HVV Hamburg)
 vsp.external-apis.geofox-base-url=https://gti.geofox.de/gti/public
-vsp.external-apis.geofox-api-user=AlexanderJakobs
-vsp.external-apis.geofox-api-password=FE1iy1B!99HX
+vsp.external-apis.geofox-api-user=***
+vsp.external-apis.geofox-api-password=***
 vsp.external-apis.geofox-timeout=5000
 
 # Logging
